Update babel config Delete babel file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,14 @@
   "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2018,
-    "sourceType": "module"
+    "sourceType": "module",
+    "requireConfigFile": false,
+    "babelOptions": {
+      "babelrc": false,
+      "configFile": false,
+      // your babel options
+      "presets": ["@babel/preset-env"]
+    }
   },
   "extends": ["airbnb-base"],
   "rules": {
